...
        <action
            android:id="@+id/action_nav_add_album_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_artist"
        android:name="com.example.vinyls.artist.AddArtistFragment"
        android:label="@string/add_artist"
        tools:layout="@layout/fragment_add_artist" >
        <action
            android:id="@+id/action_nav_add_artist_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
...
        <action
            android:id="@+id/action_nav_add_album_to_artist_to_add_albums_to_artist_form"
            app:destination="@id/add_albums_to_artist_form"/>
    </fragment>

    <fragment
        android:id="@+id/nav_list_artist"
        android:name="com.example.vinyls.artist.ArtistFragment"
        android:label="@string/artist_list"
        tools:layout="@layout/fragment_artist" >
    <action
        android:id="@+id/action_artistFragment_to_artistDetailFragment"
        app:destination="@id/artistDetailFragment" />
...
