<resources>
    <string name="app_name">vinyls</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vynils App</string>
    <string name="nav_header_subtitle">UniAndes</string>
    <string name="action_settings">Settings</string>

    <string name="add_album">Crear Album</string>
    <string name="add_artist">Crear Artista</string>
    <string name="add_album_tracks">Agregar canción a album</string>
    <string name="add_album_to_artist">Agregar album a artista</string>
    <string name="artist_list">Artistas</string>
    <string name="albums_list">Albumes</string>

    <string name="new_artist_title">Vinilos app crea \n un nuevo Artista</string>
    <string name="new_artist_name">Nombre</string>
    <string name="new_artist_image">Imagen</string>
    <string name="new_artist_birthday">Fecha de nacimiento</string>
    <string name="new_artist_description">Descripción</string>
    <!-- FORMS -->
    <string name="new_album_title">Vinilos app crea \n un nuevo Album</string>
    <string name="new_album_name">Nombre</string>
    <string name="new_album_genre">Genero</string>
    <string name="new_album_cover">Portada</string>
    <string name="new_album_release">Fecha de lanzamiento</string>
    <string name="new_album_label">Etiqueta</string>
    <string name="new_album_description">Descripción</string>
    <string name="add_album_track_tittle">Elige \n el album</string>
    <string name="add_track_tittle">Ingresa \n la canción</string>
    <string name="add_track_timer">Duración</string>
    <string name="add_album_tracks_form">Canción</string>
    <string name="album_detail">Detalle album</string>

    <string-array name="genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="labels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>


    <string name="songs">Canciones</string>
    <string name="artist_detail_albums">Albumes</string>
    <string name="detail_artist">Detalle artista</string>
    <string name="create_album">Crear</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artists">Artistas</string>
    <string name="albums">Albumes</string>
    <string name="selectartist">Seleccione un artista</string>
    <string name="selctalbum">Seleccione un album</string>

    <!-- content description -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="image_album_detail_desc">Portada del album</string>
    <string name="image_artist_detail_desc">Imagen de artista</string>
    <string name="cover_album_form_desc">Caratula del album</string>
    <string name="track_item_desc">Imagen fondo canciones</string>
</resources>